--- a/websocket/backend/package.json
+++ b/websocket/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js "
+    "start": "node --watch index.js "
   },
   "type": "module",
   "author": "",
@@ -14,7 +14,6 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "ip": "^2.0.1",
-    "nodemon": "^3.1.0",
     "socket.io": "^4.7.5"
   }
 }
